apps/production/tempo/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  namespace: tempo
spec:
  tls:
    - hosts:
        - lia-prod.cloudist.solutions
      secretName: tempo-tls-secret
  rules:
    - host: lia-prod.cloudist.solutions
      http:
        paths:
          - path: /tempo
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3100
